// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filter renders with filters selected 1`] = `
<div
  className="RSFFilter-root-1"
>
  <div
    className="MuiPaper-root-17 MuiPaper-elevation1-20 MuiExpansionPanel-root-14 RSFExpandableSection-root-5"
  >
    <div
      aria-expanded={false}
      className="MuiButtonBase-root-50 MuiExpansionPanelSummary-root-44"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex="0"
    >
      <div
        className="MuiExpansionPanelSummary-content-48 RSFExpandableSection-summary-10"
      >
        <h3
          className="MuiTypography-root-53 MuiTypography-subheading-60"
        >
          Price
        </h3>
        <span
          className="MuiTypography-root-53 MuiTypography-caption-63 RSFExpandableSection-caption-6"
        >
          Up to $100
        </span>
      </div>
      <div
        aria-hidden="true"
        className="MuiButtonBase-root-50 MuiIconButton-root-88 MuiExpansionPanelSummary-expandIcon-49"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex={-1}
      >
        <span
          className="MuiIconButton-label-93"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-94 RSFExpandableSection-expandIcon-12"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-126"
        />
      </div>
    </div>
    <div
      aria-hidden="true"
      className="MuiCollapse-container-103"
      style={
        Object {
          "minHeight": "0px",
        }
      }
    >
      <div
        className="MuiCollapse-wrapper-105"
      >
        <div
          className="MuiCollapse-wrapperInner-106"
        >
          <div
            className="MuiExpansionPanelDetails-root-107 RSFExpandableSection-details-9"
          >
            <div
              className="MuiFormGroup-root-108"
            >
              <label
                className="MuiFormControlLabel-root-110"
              >
                <span
                  className="MuiButtonBase-root-50 MuiIconButton-root-88 MuiPrivateSwitchBase-root-122 MuiCheckbox-root-116 MuiCheckbox-colorPrimary-120 MuiPrivateSwitchBase-checked-123 MuiCheckbox-checked-117"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={null}
                >
                  <span
                    className="MuiIconButton-label-93"
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-94"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                      />
                    </svg>
                    <input
                      checked={true}
                      className="MuiPrivateSwitchBase-input-125"
                      data-indeterminate={false}
                      onChange={[Function]}
                      type="checkbox"
                    />
                  </span>
                  <span
                    className="MuiTouchRipple-root-126"
                  />
                </span>
                <span
                  className="MuiTypography-root-53 MuiTypography-body1-62 MuiFormControlLabel-label-115"
                >
                  <span>
                    <span>
                      Up to $100
                    </span>
                    <span
                      className="MuiTypography-root-53 MuiTypography-body1-62 RSFFilter-matches-2"
                      variable="caption"
                    >
                      (
                      20
                      )
                    </span>
                  </span>
                </span>
              </label>
              <label
                className="MuiFormControlLabel-root-110"
              >
                <span
                  className="MuiButtonBase-root-50 MuiIconButton-root-88 MuiPrivateSwitchBase-root-122 MuiCheckbox-root-116 MuiCheckbox-colorPrimary-120"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={null}
                >
                  <span
                    className="MuiIconButton-label-93"
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-94"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                      />
                    </svg>
                    <input
                      checked={false}
                      className="MuiPrivateSwitchBase-input-125"
                      data-indeterminate={false}
                      onChange={[Function]}
                      type="checkbox"
                    />
                  </span>
                  <span
                    className="MuiTouchRipple-root-126"
                  />
                </span>
                <span
                  className="MuiTypography-root-53 MuiTypography-body1-62 MuiFormControlLabel-label-115"
                >
                  <span>
                    <span>
                      $100 - $200
                    </span>
                    <span
                      className="MuiTypography-root-53 MuiTypography-body1-62 RSFFilter-matches-2"
                      variable="caption"
                    >
                      (
                      10
                      )
                    </span>
                  </span>
                </span>
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="MuiPaper-root-17 MuiPaper-elevation1-20 MuiExpansionPanel-root-14 RSFExpandableSection-root-5"
  >
    <div
      aria-expanded={false}
      className="MuiButtonBase-root-50 MuiExpansionPanelSummary-root-44"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex="0"
    >
      <div
        className="MuiExpansionPanelSummary-content-48 RSFExpandableSection-summary-10"
      >
        <h3
          className="MuiTypography-root-53 MuiTypography-subheading-60"
        >
          Color
        </h3>
        <span
          className="MuiTypography-root-53 MuiTypography-caption-63 RSFExpandableSection-caption-6"
        >
          Sunburst
        </span>
      </div>
      <div
        aria-hidden="true"
        className="MuiButtonBase-root-50 MuiIconButton-root-88 MuiExpansionPanelSummary-expandIcon-49"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex={-1}
      >
        <span
          className="MuiIconButton-label-93"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-94 RSFExpandableSection-expandIcon-12"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-126"
        />
      </div>
    </div>
    <div
      aria-hidden="true"
      className="MuiCollapse-container-103"
      style={
        Object {
          "minHeight": "0px",
        }
      }
    >
      <div
        className="MuiCollapse-wrapper-105"
      >
        <div
          className="MuiCollapse-wrapperInner-106"
        >
          <div
            className="MuiExpansionPanelDetails-root-107 RSFExpandableSection-details-9"
          >
            <div
              className="MuiFormGroup-root-108"
            >
              <label
                className="MuiFormControlLabel-root-110"
              >
                <span
                  className="MuiButtonBase-root-50 MuiIconButton-root-88 MuiPrivateSwitchBase-root-122 MuiCheckbox-root-116 MuiCheckbox-colorPrimary-120"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={null}
                >
                  <span
                    className="MuiIconButton-label-93"
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-94"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                      />
                    </svg>
                    <input
                      checked={false}
                      className="MuiPrivateSwitchBase-input-125"
                      data-indeterminate={false}
                      onChange={[Function]}
                      type="checkbox"
                    />
                  </span>
                  <span
                    className="MuiTouchRipple-root-126"
                  />
                </span>
                <span
                  className="MuiTypography-root-53 MuiTypography-body1-62 MuiFormControlLabel-label-115"
                >
                  <span>
                    <span>
                      Red
                    </span>
                    <span
                      className="MuiTypography-root-53 MuiTypography-body1-62 RSFFilter-matches-2"
                      variable="caption"
                    >
                      (
                      2
                      )
                    </span>
                  </span>
                </span>
              </label>
              <label
                className="MuiFormControlLabel-root-110"
              >
                <span
                  className="MuiButtonBase-root-50 MuiIconButton-root-88 MuiPrivateSwitchBase-root-122 MuiCheckbox-root-116 MuiCheckbox-colorPrimary-120 MuiPrivateSwitchBase-checked-123 MuiCheckbox-checked-117"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={null}
                >
                  <span
                    className="MuiIconButton-label-93"
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-94"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                      />
                    </svg>
                    <input
                      checked={true}
                      className="MuiPrivateSwitchBase-input-125"
                      data-indeterminate={false}
                      onChange={[Function]}
                      type="checkbox"
                    />
                  </span>
                  <span
                    className="MuiTouchRipple-root-126"
                  />
                </span>
                <span
                  className="MuiTypography-root-53 MuiTypography-body1-62 MuiFormControlLabel-label-115"
                >
                  <span>
                    <span>
                      Sunburst
                    </span>
                    <span
                      className="MuiTypography-root-53 MuiTypography-body1-62 RSFFilter-matches-2"
                      variable="caption"
                    >
                      (
                      10
                      )
                    </span>
                  </span>
                </span>
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Filter renders with no filters selected 1`] = `
<div
  className="RSFFilter-root-1"
>
  <div
    className="MuiPaper-root-17 MuiPaper-elevation1-20 MuiExpansionPanel-root-14 RSFExpandableSection-root-5"
  >
    <div
      aria-expanded={false}
      className="MuiButtonBase-root-50 MuiExpansionPanelSummary-root-44"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex="0"
    >
      <div
        className="MuiExpansionPanelSummary-content-48 RSFExpandableSection-summary-10"
      >
        <h3
          className="MuiTypography-root-53 MuiTypography-subheading-60"
        >
          Price
        </h3>
      </div>
      <div
        aria-hidden="true"
        className="MuiButtonBase-root-50 MuiIconButton-root-88 MuiExpansionPanelSummary-expandIcon-49"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex={-1}
      >
        <span
          className="MuiIconButton-label-93"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-94 RSFExpandableSection-expandIcon-12"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-126"
        />
      </div>
    </div>
    <div
      aria-hidden="true"
      className="MuiCollapse-container-103"
      style={
        Object {
          "minHeight": "0px",
        }
      }
    >
      <div
        className="MuiCollapse-wrapper-105"
      >
        <div
          className="MuiCollapse-wrapperInner-106"
        >
          <div
            className="MuiExpansionPanelDetails-root-107 RSFExpandableSection-details-9"
          >
            <div
              className="MuiFormGroup-root-108"
            >
              <label
                className="MuiFormControlLabel-root-110"
              >
                <span
                  className="MuiButtonBase-root-50 MuiIconButton-root-88 MuiPrivateSwitchBase-root-122 MuiCheckbox-root-116 MuiCheckbox-colorPrimary-120"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={null}
                >
                  <span
                    className="MuiIconButton-label-93"
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-94"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                      />
                    </svg>
                    <input
                      checked={false}
                      className="MuiPrivateSwitchBase-input-125"
                      data-indeterminate={false}
                      onChange={[Function]}
                      type="checkbox"
                    />
                  </span>
                  <span
                    className="MuiTouchRipple-root-126"
                  />
                </span>
                <span
                  className="MuiTypography-root-53 MuiTypography-body1-62 MuiFormControlLabel-label-115"
                >
                  <span>
                    <span>
                      Up to $100
                    </span>
                    <span
                      className="MuiTypography-root-53 MuiTypography-body1-62 RSFFilter-matches-2"
                      variable="caption"
                    >
                      (
                      20
                      )
                    </span>
                  </span>
                </span>
              </label>
              <label
                className="MuiFormControlLabel-root-110"
              >
                <span
                  className="MuiButtonBase-root-50 MuiIconButton-root-88 MuiPrivateSwitchBase-root-122 MuiCheckbox-root-116 MuiCheckbox-colorPrimary-120"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={null}
                >
                  <span
                    className="MuiIconButton-label-93"
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-94"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                      />
                    </svg>
                    <input
                      checked={false}
                      className="MuiPrivateSwitchBase-input-125"
                      data-indeterminate={false}
                      onChange={[Function]}
                      type="checkbox"
                    />
                  </span>
                  <span
                    className="MuiTouchRipple-root-126"
                  />
                </span>
                <span
                  className="MuiTypography-root-53 MuiTypography-body1-62 MuiFormControlLabel-label-115"
                >
                  <span>
                    <span>
                      $100 - $200
                    </span>
                    <span
                      className="MuiTypography-root-53 MuiTypography-body1-62 RSFFilter-matches-2"
                      variable="caption"
                    >
                      (
                      10
                      )
                    </span>
                  </span>
                </span>
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="MuiPaper-root-17 MuiPaper-elevation1-20 MuiExpansionPanel-root-14 RSFExpandableSection-root-5"
  >
    <div
      aria-expanded={false}
      className="MuiButtonBase-root-50 MuiExpansionPanelSummary-root-44"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex="0"
    >
      <div
        className="MuiExpansionPanelSummary-content-48 RSFExpandableSection-summary-10"
      >
        <h3
          className="MuiTypography-root-53 MuiTypography-subheading-60"
        >
          Color
        </h3>
      </div>
      <div
        aria-hidden="true"
        className="MuiButtonBase-root-50 MuiIconButton-root-88 MuiExpansionPanelSummary-expandIcon-49"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex={-1}
      >
        <span
          className="MuiIconButton-label-93"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-94 RSFExpandableSection-expandIcon-12"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-126"
        />
      </div>
    </div>
    <div
      aria-hidden="true"
      className="MuiCollapse-container-103"
      style={
        Object {
          "minHeight": "0px",
        }
      }
    >
      <div
        className="MuiCollapse-wrapper-105"
      >
        <div
          className="MuiCollapse-wrapperInner-106"
        >
          <div
            className="MuiExpansionPanelDetails-root-107 RSFExpandableSection-details-9"
          >
            <div
              className="MuiFormGroup-root-108"
            >
              <label
                className="MuiFormControlLabel-root-110"
              >
                <span
                  className="MuiButtonBase-root-50 MuiIconButton-root-88 MuiPrivateSwitchBase-root-122 MuiCheckbox-root-116 MuiCheckbox-colorPrimary-120"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={null}
                >
                  <span
                    className="MuiIconButton-label-93"
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-94"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                      />
                    </svg>
                    <input
                      checked={false}
                      className="MuiPrivateSwitchBase-input-125"
                      data-indeterminate={false}
                      onChange={[Function]}
                      type="checkbox"
                    />
                  </span>
                  <span
                    className="MuiTouchRipple-root-126"
                  />
                </span>
                <span
                  className="MuiTypography-root-53 MuiTypography-body1-62 MuiFormControlLabel-label-115"
                >
                  <span>
                    <span>
                      Red
                    </span>
                    <span
                      className="MuiTypography-root-53 MuiTypography-body1-62 RSFFilter-matches-2"
                      variable="caption"
                    >
                      (
                      2
                      )
                    </span>
                  </span>
                </span>
              </label>
              <label
                className="MuiFormControlLabel-root-110"
              >
                <span
                  className="MuiButtonBase-root-50 MuiIconButton-root-88 MuiPrivateSwitchBase-root-122 MuiCheckbox-root-116 MuiCheckbox-colorPrimary-120"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={null}
                >
                  <span
                    className="MuiIconButton-label-93"
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-94"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                      />
                    </svg>
                    <input
                      checked={false}
                      className="MuiPrivateSwitchBase-input-125"
                      data-indeterminate={false}
                      onChange={[Function]}
                      type="checkbox"
                    />
                  </span>
                  <span
                    className="MuiTouchRipple-root-126"
                  />
                </span>
                <span
                  className="MuiTypography-root-53 MuiTypography-body1-62 MuiFormControlLabel-label-115"
                >
                  <span>
                    <span>
                      Sunburst
                    </span>
                    <span
                      className="MuiTypography-root-53 MuiTypography-body1-62 RSFFilter-matches-2"
                      variable="caption"
                    >
                      (
                      10
                      )
                    </span>
                  </span>
                </span>
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
